[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Overlap/DetectorInimigos.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 120, 131 )

[node name="DetectorInimigos" type="Area2D" groups=[
"Radar",
]]
collision_layer = 0
collision_mask = 48
script = ExtResource( 1 )

[node name="EnemyDetector" type="CollisionShape2D" parent="."]
shape = SubResource( 53 )
[connection signal="area_entered" from="." to="." method="_on_DetectorInimigos_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_DetectorInimigos_area_exited"]
